# alkahest

./: BECNHMARKS-SMALL.md  BECNHMARKS.md  CHANGELOG.md  COPYING  Cargo.toml  README.md  test.rs
.github/: copilot-instructions.md
.github/workflows/: badge.yml  check-platforms.yml  check-targets.yml  check-toolchains.yml  fast-pr-check.yml  lints.yml  security.yml  test-features.yml
alkahest/: Cargo.toml
alkahest/examples/: _profile.rs  new.alk  new.rs  profile.rs
alkahest/src/: lib.rs
benches/: benchmark.rs
benchmark/: Cargo.toml  bench.json
benchmark/benches/: benchmark.rs
core/: Cargo.toml
core/src/: __reference.rs  array.rs  buffer.rs  deserialize.rs  element.rs  formula.rs  iter.rs  lazy.rs  lib.rs  list.rs  never.rs  option.rs  primitive.rs  reference.rs  serialize.rs  slice.rs  str.rs  string.rs  tuple.rs  vec.rs  void.rs
examples/: _profile.rs  profile.rs  test.rs  test2.rs
formula/: Cargo.toml
formula/src/: lib.rs  reference.rs
license/: APACHE  MIT
parse/: Cargo.toml
parse/src/: adt.rs  buffer.rs  lex.rs  lib.rs  parse.rs
proc/: Cargo.toml
proc/src/: alk.rs  args.rs  attrs.rs  deserialize.rs  formula.rs  include.rs  lib.rs  mixture.rs  module.rs  schema.rs  schema.rs.bak  serialize.rs
rust-gen/: Cargo.toml
rust-gen/src/: lib.rs
src/: array.rs  as.rs  bincode.rs  bincoded.rs  boxed.rs  buffer.rs  bytes.rs  cold.rs  deserialize.rs  evolution.rs  formula.rs  iter.rs  lazy.rs  lib.rs  option.rs  packet.rs  pod.rs  primitive.rs  reference.rs  schema.rs  seq.rs  serialize.rs  size.rs  skip.rs  slice.rs  str.rs  string.rs  tests.rs  tuple.rs  vec.rs  vec_deque.rs  vlq.rs
src/tests/: mod.rs  net.rs
