[package]
name = "alkahest"
version = "0.2.0-rc.5"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/alkahest"
homepage = "https://github.com/zakarumych/alkahest"
repository = "https://github.com/zakarumych/alkahest"
readme = "README.md"
description = "Fantastic serialization library with zero-overhead serialization and zero-copy deserialization"

[features]
alloc = [] # enables impls for types from `alloc` crate.
derive = ["alkahest-proc"]

## TODO: Control on value or type level?
## Keep features for defaults?
fixed8 = [] # sets size of `FixedUsize` and `FixedIsize` to 8 bits.
fixed16 = [] # sets size of `FixedUsize` and `FixedIsize` to 16 bits.
fixed32 = [] # sets size of `FixedUsize` and `FixedIsize` to 32 bits. Default.
fixed64 = [] # sets size of `FixedUsize` and `FixedIsize` to 64 bits.
default = ["alloc", "fixed32"]

serde-bincode = ["bincode", "serde", "alloc"]

[dependencies]
alkahest-proc = { version = "=0.2.0-rc.2", path = "proc", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }

[[example]]
name = "test"
required-features = ["derive", "alloc"]

[workspace]
members = ["proc", "benchmark"]
