[package]
name = "alkahest"
version = "0.3.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/alkahest"
homepage = "https://github.com/zakarumych/alkahest"
repository = "https://github.com/zakarumych/alkahest"
readme = "README.md"
description = "Fantastic serialization library with zero-overhead serialization and zero-copy deserialization"

[features]
alloc = []                 # enables impls for types from `alloc` crate.
std = ["alloc"]
derive = ["alkahest-proc"]
inline-more = []

## TODO: Control on value or type level?
## Keep features for defaults?
fixed8 = []  # sets size of `FixedUsize` and `FixedIsize` to 8 bits.
fixed16 = [] # sets size of `FixedUsize` and `FixedIsize` to 16 bits.
fixed32 = [] # sets size of `FixedUsize` and `FixedIsize` to 32 bits. Default.
fixed64 = [] # sets size of `FixedUsize` and `FixedIsize` to 64 bits.

default = ["alloc", "fixed32", "inline-more"]

bincoded = ["bincode", "serde", "std"]

[dependencies]
alkahest-proc = { version = "=0.3.0", path = "proc", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[[example]]
name = "test"
required-features = ["derive", "alloc"]

[[example]]
name = "profile"
required-features = ["derive", "alloc"]

[workspace]
members = ["proc", "benchmark"]
