[workspace]
members = ["parse", "core", "proc", "alkahest"]
resolver = "3"
edition = "2024"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alkahest-core = { path = "core" }
alkahest-parse = { path = "parse" }
alkahest-proc = { path = "proc" }

unicode-ident = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
