[package]
name = "alkahest-benchmark"
version = "0.0.0"
publish = false

[dependencies]
alkahest = { path = "..", features = ["derive"] }
criterion = { version = "0.4", features = ["real_blackbox"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rkyv = { version = "0.7", features = ["validation"], optional = true }
bytecheck = "0.6"

[[bench]]
name = "benchmark"
harness = false
