[package]
name = "alkahest-benchmark"
version = "0.0.0"
publish = false

[features]

nightly = ["criterion/real_blackbox"]

default = ["alkahest/default", "speedy", "rkyv", "serde", "bincode"]

[dependencies]
alkahest = { path = "..", features = ["derive"], default-features = false }
criterion = { version = "0.5" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rkyv = { version = "0.7", features = ["validation"], optional = true }
bytecheck = "0.6"
speedy = { version = "0.8", optional = true }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "benchmark"
harness = false
