[package]
name = "alkahest-proc"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
evolution = []

[dependencies]
alkahest-parse.workspace = true

proc-macro2 = "1.0"
syn = { version = "2.0", features = ["derive"] }
quote = "1.0"
proc-easy = { version = "0.4.0" }
